[package]
name = "thruster-jab"
version = "0.1.0"
edition = "2018"
description = "Quick and simple dependency injection."
license = "MIT"


[[example]]
name = "hello_world"
test = true

[dependencies]

[dev-dependencies]
dotenv = "0.15.0"
env_logger = "0.7.1"
hyper = "0.14.8"
log = "0.4"
thruster = { version = "1.1.10", features = ["hyper_server"] }
tokio = { version = "0.2.22", features = ["full"] }
